--- a/.github/workflows/project-feedback.yml
+++ b/.github/workflows/project-feedback.yml
@@ -25,4 +25,4 @@ jobs:
       #Run Automated Tests
       - name: Project Automated Testing
         id: pr_feedback
-        run: ./project/tests.sh
+        run: tests.sh
