--- a/.github/workflows/project-feedback.yml
+++ b/.github/workflows/project-feedback.yml
@@ -16,6 +16,12 @@ jobs:
         with:
           path: main
 
+      - name: Checkout Automatic Testing
+        uses: actions/checkout@v4
+        with:
+          repository: Taimoor-yd29alul/Made-Data-Science-Project
+          path: testing
+
       # Install python
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
@@ -25,4 +31,4 @@ jobs:
       #Run Automated Tests
       - name: Project Automated Testing
         id: pr_feedback
-        run: /project/tests.sh
+        run: ./testing/project/tests.sh
