--- a/.github/workflows/project-feedback.yml
+++ b/.github/workflows/project-feedback.yml
@@ -25,9 +25,9 @@ jobs:
       #Make file Executable
       - name: File Executable
         id: pr_feedback
-        run: chmod +x ./testing/project/tests.sh
+        run: chmod +x ./project/tests.sh
 
       #Run Automated Tests
       - name: Project Automated Testing
         id: pr_feedback1
-        run: ./testing/project/tests.sh
+        run: ./project/tests.sh
