--- a/.github/workflows/project-feedback.yml
+++ b/.github/workflows/project-feedback.yml
@@ -23,14 +23,14 @@ jobs:
           python-version: 3.11
 
       - name: test
-        run: ls
+        run: ls ./main/
 
       #Make file Executable
       - name: File Executable
         id: pr_feedback
-        run: chmod +x ./project/tests.sh
+        run: chmod +x ./main/project/tests.sh
 
       #Run Automated Tests
       - name: Project Automated Testing
         id: pr_feedback1
-        run: ./project/tests.sh
+        run: ./main/project/tests.sh
